@startuml

title __PROJECT_CODE.DOMIN's Class Diagram__\n

  namespace com.cachecats.domin {
    class com.cachecats.domin.BuildConfig {
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.model {
      class com.cachecats.domin.shop.model.GroupPackageModel {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.model {
      class com.cachecats.domin.shop.model.ShopEvaluateModel {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.model {
      class com.cachecats.domin.shop.model.ShopGroupInfoModel {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.model {
      class com.cachecats.domin.shop.model.ShopModel {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.repository {
      interface com.cachecats.domin.shop.repository.GroupPackageRepository {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.repository {
      interface com.cachecats.domin.shop.repository.ShopGroupInfoRepo {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.repository {
      interface com.cachecats.domin.shop.repository.ShopRepository {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.service {
      class com.cachecats.domin.shop.service.GroupPackageService {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.service {
      class com.cachecats.domin.shop.service.GroupPackageService_Factory {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.service {
      class com.cachecats.domin.shop.service.ShopGroupInfoService {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.service {
      class com.cachecats.domin.shop.service.ShopGroupInfoService_Factory {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.service {
      class com.cachecats.domin.shop.service.ShopService {
      }
    }
  }
  

  namespace com.cachecats.domin {
    namespace shop.service {
      class com.cachecats.domin.shop.service.ShopService_Factory {
      }
    }
  }
  

  com.cachecats.domin.shop.model.GroupPackageModel .up.|> java.io.Serializable
  com.cachecats.domin.shop.model.ShopEvaluateModel .up.|> java.io.Serializable
  com.cachecats.domin.shop.model.ShopGroupInfoModel .up.|> java.io.Serializable
  com.cachecats.domin.shop.model.ShopModel .up.|> java.io.Serializable
  com.cachecats.domin.shop.service.GroupPackageService o-- com.cachecats.domin.shop.repository.GroupPackageRepository : repository
  com.cachecats.domin.shop.service.GroupPackageService_Factory .up.|> dagger.internal.Factory
  com.cachecats.domin.shop.service.ShopGroupInfoService o-- com.cachecats.domin.shop.repository.ShopGroupInfoRepo : repo
  com.cachecats.domin.shop.service.ShopGroupInfoService_Factory .up.|> dagger.internal.Factory
  com.cachecats.domin.shop.service.ShopService o-- com.cachecats.domin.shop.repository.ShopRepository : repository
  com.cachecats.domin.shop.service.ShopService_Factory .up.|> dagger.internal.Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
